﻿==================
### 1.9.1
==================

*** INCOMPATIBLE CHANGES ***:
- Typo'd packet name actor_died_or_disappeard renamed to
  actor_died_or_disappeared.
- Config option 'exeName' renamed to 'XKore_exeName'.
- Renamed skill: "A Moonlit Water Mill"

Bug fixes:
- Fixed the unknown packets when switching characters on servers
  that requires GameGuard to login
- Fixed partySkill_0 block ignoring timeouts due to the a bug in
  setPartySkillTimer.
- Fixed 'unblessed reference' error messages when using some old plugins.
- Fixed a bug in teleportAuto_allPlayers which causes the bot to do nothing
  after a teleport.
- Fixed Tension Relax skill deactivating. Previously kore would attempt to
  stand up whenever the skill activates (the skill forces the character to
  sit down). It now queues the ai sequence "sitAuto" - as a side effect,
  the config option sitAuto_hp_upper needs to be set. Example:

  sitAuto_hp_upper 90
  useSelf_skill Tension Relax {
    whenStatusInactive Tension Relax
    hp < 70%
    sp > 80%
  }

- Location-based skills are now casted on a target's present location
  rather than their pos_to in attackSkillSlot.
- Fixed multiple sitAuto sequences being queued.
- Fix the Win32 GUI interface.
- Fixed a bug where the weight command only allows a single digit parameter.
- Fixed a bug where kore immediately stands up when the player manually uses
  the 'sit' command.
- The 'sit' command no longer modifies any config options.
- Location-based partySkills should target better now.
- teleportAuto_portal will now be temporarily disabled during autoStorage,
  autoSell and autoBuy.
- Fixed a variable clash bug in useSelf_skill (useSelf_skill_smartHeal code)
  which causes equip_* options not work
- Kore will now try to stand first before using the Teleport skill.
- Fixed a bug where Kore uses SP on teleport when switching accessory even if
  teleportAuto_useSkill is set to 3.
- teleportAuto_dropTarget now triggers on "Unable to calculate a route to